# vksdl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json  verify-local.ps1
.github/workflows/: ci.yml
cmake/: vksdlConfig.cmake.in
docs/: BLOCKING_WAIT_AUDIT.txt
examples/: CMakeLists.txt
examples/async_transfer/: CMakeLists.txt  main.cpp
examples/async_transfer/shaders/: transfer_demo.vert
examples/compute/: CMakeLists.txt  main.cpp
examples/compute/shaders/: gradient.comp
examples/cube/: CMakeLists.txt  main.cpp
examples/cube/shaders/: cube.vert
examples/deferred/: CMakeLists.txt  main.cpp
examples/deferred/shaders/: fullscreen.vert  gbuffer.frag  lighting.frag  shadow.frag  tonemap.frag  ui.frag
examples/descriptor_pool/: CMakeLists.txt  main.cpp
examples/descriptor_pool/shaders/: pool_cube.vert
examples/device_fault/: CMakeLists.txt  main.cpp
examples/dynamic_state/: CMakeLists.txt  main.cpp
examples/dynamic_state/shaders/: dynstate.vert
examples/model/: CMakeLists.txt  main.cpp
examples/model/shaders/: mesh.frag  mesh.vert
examples/msaa/: CMakeLists.txt  main.cpp
examples/multi_object/: CMakeLists.txt  main.cpp
examples/multi_object/shaders/: multi_object.frag  multi_object.vert
examples/pipeline_cache/: CMakeLists.txt  main.cpp
examples/pipeline_cache/shaders/: mandelbrot.comp  plasma.comp  sdf_sphere.comp  voronoi.comp
examples/pipeline_compiler/: CMakeLists.txt  main.cpp
examples/pipeline_compiler/shaders/: iridescent.frag  marble.frag  overlay.frag  overlay.vert  pbr_noise.frag  scene.vert  voronoi.frag
examples/quad/: CMakeLists.txt  main.cpp
examples/rt_spheres/: CMakeLists.txt  main.cpp
examples/rt_spheres/shaders/: closesthit.rchit  miss.rmiss  raygen.rgen
examples/rt_triangle/: CMakeLists.txt  main.cpp
examples/rt_triangle/shaders/: closesthit.rchit  miss.rmiss  raygen.rgen  shadow_miss.rmiss
examples/shader_reflect/: CMakeLists.txt  main.cpp
examples/shader_reflect/shaders/: edge_filter.comp  gen_scene.comp
examples/textured_cube/: CMakeLists.txt  main.cpp
examples/textured_cube/shaders/: textured_cube.frag  textured_cube.vert
examples/timeline_sync/: CMakeLists.txt  main.cpp
examples/timeline_sync/shaders/: overlay.frag  overlay.vert  timeline_pattern.comp
examples/triangle/: CMakeLists.txt  main.cpp
examples/unified_layouts/: CMakeLists.txt  main.cpp
examples/unified_layouts/shaders/: blur.comp  color_shift.comp  gen_pattern.comp  vignette.comp
include/vksdl/: allocator.hpp  app.hpp  barriers.hpp  bindless_table.hpp  blas.hpp  buffer.hpp  command_pool.hpp  command_pool_factory.hpp  compute_pipeline.hpp  compute_queue.hpp  debug.hpp  descriptor_allocator.hpp  descriptor_layout.hpp  descriptor_pool.hpp  descriptor_set.hpp  descriptor_writer.hpp  device.hpp  error.hpp  event.hpp  fly_camera.hpp  frame_descriptor_allocator.hpp  frames.hpp  graph.hpp  image.hpp  instance.hpp  mesh.hpp  mesh_pipeline.hpp  orbit_camera.hpp  pipeline.hpp  pipeline_cache.hpp  projection.hpp  push_descriptor_writer.hpp  query_pool.hpp  result.hpp  rt_pipeline.hpp  sampler.hpp  sampler_cache.hpp  sbt.hpp  shader_reflect.hpp  surface.hpp  (+12 more)
include/vksdl/graph/: barrier_compiler.hpp  pass.hpp  pass_context.hpp  render_graph.hpp  resource.hpp  resource_state.hpp
include/vksdl/pipeline_model/: gpl_library.hpp  pipeline_compiler.hpp  pipeline_handle.hpp  pipeline_policy.hpp
ports/vksdl/: portfile.cmake  usage  vcpkg.json
scripts/: bump-version.sh  check-blocking-waits.sh  check-header-self-containment.sh  check-no-exceptions-surface.sh  check-version-sync.sh  clang-format.ps1  clang-format.sh
src/core/: error.cpp
src/graph/: barrier_compiler.cpp  pass.cpp  pass_context.cpp  render_graph.cpp  resource_state.cpp
src/pipeline_model/: gpl_library.cpp  pipeline_compiler.cpp  pipeline_handle.cpp  pipeline_handle_impl.hpp
src/platform/sdl3/: app_sdl3.cpp  fly_camera_sdl3.cpp  orbit_camera_sdl3.cpp  util_sdl3.cpp  window_impl.hpp  window_sdl3.cpp
src/vulkan/: allocator.cpp  barriers.cpp  bindless_table.cpp  blas.cpp  buffer.cpp  command_pool.cpp  command_pool_factory.cpp  compute_pipeline.cpp  compute_queue.cpp  debug.cpp  descriptor_allocator.cpp  descriptor_layout.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_writer.cpp  device.cpp  device_lost.hpp  event.cpp  frame_descriptor_allocator.cpp  frames.cpp  image.cpp  instance.cpp  loader_gltf.cpp  loader_obj.cpp  mesh.cpp  mesh_functions.cpp  mesh_functions.hpp  mesh_loaders.hpp  mesh_pipeline.cpp  pipeline.cpp  pipeline_cache.cpp  push_descriptor_writer.cpp  query_pool.cpp  rt_functions.cpp  rt_functions.hpp  rt_pipeline.cpp  sampler.cpp  sampler_cache.cpp  sbt.cpp  shader_reflect.cpp  (+7 more)
tests/: CMakeLists.txt
tests/consumer_smoke/: CMakeLists.txt  main.cpp
tests/integration/: test_allocator.cpp  test_async_compute.cpp  test_barrier_compiler.cpp  test_bindless_table.cpp  test_command_pool.cpp  test_command_pool_factory.cpp  test_compute_pipeline.cpp  test_debug_name.cpp  test_descriptor_allocator.cpp  test_descriptor_pool.cpp  test_descriptor_set.cpp  test_device_builder.cpp  test_device_fault.cpp  test_dynamic_state.cpp  test_dynamic_ubo.cpp  test_error_recovery.cpp  test_event.cpp  test_frame_descriptor_allocator.cpp  test_framesync.cpp  test_indirect_buffer.cpp  test_instance_builder.cpp  test_memory_budget.cpp  test_memory_priority.cpp  test_mesh.cpp  test_mesh_pipeline.cpp  test_mipmaps.cpp  test_msaa.cpp  test_pipeline.cpp  test_pipeline_binary.cpp  test_pipeline_cache.cpp  test_pipeline_compiler.cpp  test_pipeline_feedback.cpp  test_pipeline_handle.cpp  test_present_timing.cpp  test_push_descriptor_writer.cpp  test_query_pool.cpp  test_queue_ownership.cpp  test_render_graph.cpp  test_resource_state.cpp  test_rt.cpp  (+11 more)
tests/integration/shaders/: noop.comp  reflect_test.comp  spec_const.comp
tests/unit/: test_error.cpp  test_native_accessors.cpp  test_projection.cpp  test_result.cpp  test_transform.cpp  test_wsi_extensions.cpp
