add_subdirectory(triangle)
add_subdirectory(quad)
add_subdirectory(compute)
add_subdirectory(cube)
add_subdirectory(textured_cube)
add_subdirectory(multi_object)
add_subdirectory(msaa)
add_subdirectory(model)
add_subdirectory(rt_triangle)
add_subdirectory(rt_spheres)
add_subdirectory(pipeline_cache)
add_subdirectory(device_fault)
add_subdirectory(dynamic_state)
add_subdirectory(timeline_sync)
add_subdirectory(descriptor_pool)
add_subdirectory(async_transfer)
add_subdirectory(unified_layouts)
add_subdirectory(shader_reflect)
add_subdirectory(deferred)
add_subdirectory(pipeline_compiler)
